FIPS-10148/FIPS-10155 :: Filter misleading felix warning
Change-Id: I22397b682315aec9983c6668132a9ff27b4f8370