@@ -1,9 +1,9 @@
 /*******************************************************************************
  * Copyright (c) Faktor Zehn GmbH - faktorzehn.org
- * 
+ *
  * This source code is available under the terms of the AGPL Affero General Public License version
  * 3.
- * 
+ *
  * Please see LICENSE.txt for full license terms, including the additional permissions and
  * restrictions as well as the possibility of alternative license terms.
  *******************************************************************************/
@@ -18,7 +18,6 @@ import java.io.PrintStream;
 import java.nio.charset.Charset;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.IOUtils;
 
@@ -26,7 +25,8 @@ public class BuildLogPrintStream {
 
     private static final String ANT_TASK_HEADER = "(\\[faktorips\\.\\w+\\] ?)?";
     private static final String REPEAT_ANT_TASK_HEADER = "\\1";
-    private static final String ALL_LINE = ".+?\r?\n";
+    private static final String ALL_LINE = ".+?\\R";
+    private static final String OPTIONAL_BLANK_LINE = "\\R?";
 
     private final File logFile;
     private final PrintStream printStream;
@@ -60,7 +60,7 @@ public class BuildLogPrintStream {
      * ... till last line of the stacktrace
      * [faktorips.import]  at org.eclipse.equinox.launcher.Main.main(Main.java:1449)
      * </pre>
-     * 
+     *
      * @param content the original output of eclipse
      * @return the filtered output
      */
@@ -75,16 +75,41 @@ public class BuildLogPrintStream {
     private List<Pattern> compileRegexPatternForFilters() {
         return filters.stream().map(exceptionText -> {
             StringBuilder sb = new StringBuilder();
-            // ECLIPSE ERROR HEADER
-            sb.append(ANT_TASK_HEADER).append("!ENTRY").append(ALL_LINE);
-            sb.append(REPEAT_ANT_TASK_HEADER).append("!MESSAGE").append(ALL_LINE);
-            sb.append(REPEAT_ANT_TASK_HEADER).append("!STACK").append(ALL_LINE);
-            // EXCEPTION TEXT
-            sb.append(REPEAT_ANT_TASK_HEADER).append(exceptionText).append("\r?\n");
-            // STACKTRACE
-            sb.append("(?:").append(REPEAT_ANT_TASK_HEADER).append("\tat .*\r?\n)*");
+            sb.append("(?:");
+            patternWithAntTaskHeader(exceptionText, sb);
+            sb.append(")");
+            sb.append("|");
+            sb.append("(?:");
+            pattern(exceptionText, sb);
+            sb.append(")");
             return Pattern.compile(sb.toString());
-        }).collect(Collectors.toList());
+        }).toList();
+    }
+
+    private void pattern(String exceptionText, StringBuilder sb) {
+        // ECLIPSE ERROR HEADER
+        sb.append("!ENTRY").append(ALL_LINE);
+        sb.append("!MESSAGE").append(ALL_LINE);
+        sb.append("(?:").append(ALL_LINE).append(")*");
+        sb.append(OPTIONAL_BLANK_LINE);
+        sb.append("!STACK").append(ALL_LINE);
+        // EXCEPTION TEXT
+        sb.append(exceptionText).append("\\R");
+        // STACKTRACE
+        sb.append("(?:").append("\\s+at .*\\R)*");
+    }
+
+    private void patternWithAntTaskHeader(String exceptionText, StringBuilder sb) {
+        // ECLIPSE ERROR HEADER
+        sb.append(ANT_TASK_HEADER).append("!ENTRY").append(ALL_LINE);
+        sb.append(REPEAT_ANT_TASK_HEADER).append("!MESSAGE").append(ALL_LINE);
+        sb.append("(?:").append(REPEAT_ANT_TASK_HEADER).append(ALL_LINE).append(")*");
+        sb.append(OPTIONAL_BLANK_LINE);
+        sb.append(REPEAT_ANT_TASK_HEADER).append("!STACK").append(ALL_LINE);
+        // EXCEPTION TEXT
+        sb.append(REPEAT_ANT_TASK_HEADER).append(exceptionText).append("\\R");
+        // STACKTRACE
+        sb.append("(?:").append(REPEAT_ANT_TASK_HEADER).append("\\tat .*\\R)*");
     }
 
     public void flush() {
